--- a/MySQL_and_Python Integration/config.ini
+++ b/MySQL_and_Python Integration/config.ini
@@ -1,7 +1,7 @@
 [Connection]
 HOST = localhost
-USER = Nikil
-PASSWORD = Alfred_5719
+USER = (your username)
+PASSWORD = (your password)
 
 [Preferences]
 DB_NAME = Test_DB
